<resources>
    <string name="app_name">Aflamy</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="username_text">UserName</string>
    <string name="password_text">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="create_account_button">Create Account</string>

</resources>